fixed equals button on mobile from running off the calculator background

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,11 +86,13 @@ button:active {
 @media only screen and (max-width: 500px) {
     body {
         display: block;
+        margin-top: 2px;
        
     }
     .calculator {
         width:auto;
-        height: 95vh;
+        height: 100vh;
+    
         
     }
 
